// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> renders correctly 1`] = `
<Radio>
  <RadioWrapper>
    <div
      className="css-4bf524-RadioWrapper e15nh6al0"
    >
      <RadioInput
        type="radio"
      >
        <input
          className="css-xduwow-RadioInput e15nh6al1"
          type="radio"
        />
      </RadioInput>
      <RadioIcon>
        <div
          className="css-zo8k0n-RadioIcon e15nh6al2"
        />
      </RadioIcon>
    </div>
  </RadioWrapper>
</Radio>
`;

exports[`<Radio /> when checked renders correctly 1`] = `
<Radio
  defaultChecked={true}
>
  <RadioWrapper>
    <div
      className="css-4bf524-RadioWrapper e15nh6al0"
    >
      <RadioInput
        defaultChecked={true}
        type="radio"
      >
        <input
          className="css-xduwow-RadioInput e15nh6al1"
          defaultChecked={true}
          type="radio"
        />
      </RadioInput>
      <RadioIcon>
        <div
          className="css-zo8k0n-RadioIcon e15nh6al2"
        />
      </RadioIcon>
    </div>
  </RadioWrapper>
</Radio>
`;

exports[`<Radio /> when disabled renders correctly 1`] = `
<Radio
  disabled={true}
>
  <RadioWrapper>
    <div
      className="css-4bf524-RadioWrapper e15nh6al0"
    >
      <RadioInput
        disabled={true}
        type="radio"
      >
        <input
          className="css-xduwow-RadioInput e15nh6al1"
          disabled={true}
          type="radio"
        />
      </RadioInput>
      <RadioIcon>
        <div
          className="css-zo8k0n-RadioIcon e15nh6al2"
        />
      </RadioIcon>
    </div>
  </RadioWrapper>
</Radio>
`;
